tests/test-files/parse-unsafe.txt
================================================================================
100 Missing unsafe body
================================================================================

(package test-package
  (import coalton++))

(define x (unsafe))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:4:17
   |
 4 |  (define x (unsafe))
   |                   ^ expected body

================================================================================
101 Valid unsafe expression
================================================================================

(package test-package
  (import coalton++))

(define x
  (unsafe
    (lisp (-> Integer) () 1)))
